# technical_support_bot

./: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  settings.py
app/: main.py  settings.py
app/bot/handlers/: commands.py
app/consumers/: handlers.py  main.py  schemas.py
app/containers/: factories.py  providers.py
app/dtos/: messages.py
app/exceptions/: base.py  chats.py
app/services/: constans.py  web.py
app/services/converters/: chat.py
containers/: providers.py
docker_compose/: consumer.yaml
dtos/: messages.py
exceptions/: chats.py
handlers/converters/: chats.py
services/: constans.py  web.py
services/converters/: chat.py
